...
class BookingCriteriaViewController: BookingViewController,DateTimePickerDelegate,UITextFieldDelegate {
    
    var fromStation = "台北"
    
    var destinationStation = "台南"
    
    let traintypes = ["普悠瑪號","太魯閣號","自強號","莒光號","區間車"]
    
    var stackView: UIStackView!
    
    var headerStackView: UIStackView!
    
    var inputStackView: UIStackView!
...
                   action: #selector(dateSelect),
                   for: .touchUpInside)
        timeSegmentedContainerView.setTitle(title: "Time")
        trainTypeContainerView.setTitle(title: "Train")
        reloadTimeSegemtnedControl()
        reloadtrainTypeControl()
        mainCallToActionButton.setTitle("Search for Tickets")
    }
    
 
    @objc private func stationCardControlDidTouch() {
        let view = StationSelectTableViewController()
        view.type = 0
...
        //        picker.is12HourFormat = true
        //        picker.dateFormat = "hh:mm aa dd/MM/YYYY"
        //        picker.isTimePickerOnly = true
        picker.includeMonth = true // if true the month shows at bottom of date cell
        picker.highlightColor = UIColor(red: 255.0/255.0, green: 138.0/255.0, blue: 138.0/255.0, alpha: 1)
        picker.darkColor = UIColor.darkGray
        picker.doneButtonTitle = "SELECT"
        picker.doneBackgroundColor = UIColor(red: 255.0/255.0, green: 138.0/255.0, blue: 138.0/255.0, alpha: 1)
        picker.completionHandler = { date in
            let formatter = DateFormatter()
            //formatter.dateFormat = "hh:mm aa dd/MM/YYYY"
            formatter.dateFormat = "E, d MMM yyyy HH:mm:ss Z"
            //self.title = formatter.string(from: date)
...
        let now = Date()
        
        //MARK:時間選擇
        timeSegmentedControl.items = [(title: "Morning",
                                       subtitle: morning.toString(),
                                       isEnabled: now < morning.upperBound),
                                      (title: "Afternoon",
                                       subtitle: afternoon.toString(),
                                       isEnabled: now < afternoon.upperBound),
                                      (title: "Evening",
                                       subtitle: evening.toString(),
                                       isEnabled: now < evening.upperBound)]
    }
    @objc private func reloadtrainTypeControl() {
        //普悠瑪號/太魯閣號/自強號/莒光號/區間車
        _ = ["普悠瑪號","太魯閣號","自強號","莒光號","區間車"]
...
