...
                                                                <state key="normal" image="nametag"/>
                                                            </button>
                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="IDNUMBER" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="Az7-qF-ebx">
                                                                <rect key="frame" x="34" y="0.0" width="320" height="24"/>
                                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                                                                <state key="normal" image="email"/>
                                                            </button>
                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="EMAIL" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="OH2-0V-Pwp">
                                                                <rect key="frame" x="34" y="0.0" width="320" height="24"/>
                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                                <state key="normal" image="lock"/>
                                                            </button>
                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="PASSWORD" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="LMx-bY-0qs">
                                                                <rect key="frame" x="34" y="0.0" width="320" height="27"/>
                                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                                        <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="17"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="LOGIN">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="17"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="BOOKING">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="17"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="RECORD">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
