...
//import UIKit
//
//class StationSelectTableViewController: UITableViewController {
//
//
//    var station = [
//        "臺北市","新北市","桃園市","臺中市","臺南市","高雄市",
//    "基隆市",
//        "新竹市",
//        "嘉義市"
//
//    ]
//    override func viewDidLoad() {
...
